5.0.3
[fix] Kodi 19 not working
[fix] remove LOGNOTICE AND LOGSEVERE, both removed in Kodi 19
5.0.2
[upd] Use new settings format on Kodi 19

5.0.1
[fix] progress dialog in Kodi 19 nightlies
[fix] inputstream property in Kodi 19 nightlies
[fix] handling of inputstream.adaptive not being installed

5.0.0
[chg] only use youtube-dl to resolve content

4.0.1
[rem] URLResolver as optional dependency

4.0.0
[add] use YouTube add-on to resolve YouTube links if the add-on is available
[add] reuse language invoker
[add] Python 3 compat.
[upd] use SPDX license identifiers
[upd] resolve inspections and cosmetics

3.5.0
- URLResolver is now optional

3.4.6
- cosmetic

3.4.5
- fix resolving urls with spaces

3.4.4
- fix Facebook videos having no audio

3.4.3
- update reddit video resolver
- fix m3u8 check missing urls with parameters
- add shout: to direct play
- filter .css
- remove unused dialog

3.4.2
- fix executable items

3.4.1
- update strings path
- add debug log to failed head requests
- add reddit resolver

3.4.0
- Kodi 16 + required
- use inputstream.adaptive for hls if supported
- expand check for dash content type
- fix single source return

3.3.0.6
- minor refactor of xxx

3.3.0.5
- add xxx smu resolvers

3.3.0.3
- remove external resolver plugins
- resolve requiring to back out of add-on twice

3.3.0.1
- add external resolvers

3.2.2
- resolve breaking change from urlresolver

3.2.1
- jsonrpc now uses POST instead of GET

3.2.0
- add inputstream.rtmp and inputstream.hls
- remove twitch from runplugin exceptions

3.1.1
- add Setting to 'Remote/Send' - 'Resolve/scrape locally'
- minor progress dialog fixes
- minor string updates

3.1.0
- add 'Send to remote PlayThis'
- add 'Export to .strm'
- add thumbnail support
- performance improvement
- update and improve dash support
- update context menu layout
- change cookie handling
- change settings category 'Cache' -> 'Maintenance', and add 'Clear Cookies'
- other minor adjusts, bug fixes, refactoring

3.0.0